// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. front lead one - portrait - 768 1`] = `
<TabletContentContainer
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
      "marginBottom": 56,
      "marginHorizontal": 30,
      "marginTop": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "75.69040697674419%",
        }
      }
    >
      <Text>
        lead
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginTop": 0,
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "24.164244186046513%",
        }
      }
    >
      <Text>
        support
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 133,
        "marginTop": 15,
        "width": "100%",
      }
    }
  >
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`2. front lead one - portrait - 810 1`] = `
<TabletContentContainer
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
      "marginBottom": 56,
      "marginHorizontal": 30,
      "marginTop": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "75.69040697674419%",
        }
      }
    >
      <Text>
        lead
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginTop": 0,
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "24.164244186046513%",
        }
      }
    >
      <Text>
        support
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 148,
        "marginTop": 20,
        "width": "100%",
      }
    }
  >
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`3. front lead one - portrait - 834 1`] = `
<TabletContentContainer
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
      "marginBottom": 56,
      "marginHorizontal": 30,
      "marginTop": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "75.69040697674419%",
        }
      }
    >
      <Text>
        lead
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginTop": 0,
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "24.164244186046513%",
        }
      }
    >
      <Text>
        support
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 148,
        "marginTop": 15,
        "width": "100%",
      }
    }
  >
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`4. front lead one - portrait - 1024 1`] = `
<TabletContentContainer
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
      "marginBottom": 56,
      "marginHorizontal": 30,
      "marginTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "75.69040697674419%",
        }
      }
    >
      <Text>
        lead
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginTop": 0,
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "24.164244186046513%",
        }
      }
    >
      <Text>
        support
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 174,
        "marginTop": 15,
        "width": "100%",
      }
    }
  >
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`5. front lead one - landscape - 1024 1`] = `
<TabletContentContainer
  style={
    Object {
      "marginBottom": 56,
      "marginTop": 15,
    }
  }
>
  <HorizontalLayout />
</TabletContentContainer>
`;

exports[`6. front lead one - landscape - 1080 1`] = `
<TabletContentContainer
  style={
    Object {
      "marginBottom": 56,
      "marginTop": 15,
    }
  }
>
  <HorizontalLayout />
</TabletContentContainer>
`;

exports[`7. front lead one - landscape - 1112 1`] = `
<TabletContentContainer
  style={
    Object {
      "marginBottom": 56,
      "marginTop": 15,
    }
  }
>
  <HorizontalLayout />
</TabletContentContainer>
`;

exports[`8. front lead one - landscape - 1194 1`] = `
<TabletContentContainer
  style={
    Object {
      "marginBottom": 56,
      "marginTop": 15,
    }
  }
>
  <HorizontalLayout />
</TabletContentContainer>
`;

exports[`9. front lead one - landscape - 1366 1`] = `
<TabletContentContainer
  style={
    Object {
      "marginBottom": 56,
      "marginTop": 20,
    }
  }
>
  <HorizontalLayout />
</TabletContentContainer>
`;
